--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+  "@vitejs/plugin-react": "^4.0.0"
   }
 }
